# flamingo_repo

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
autoresearch/: REPORT.md  cat1h.py  cat_model.py  diag01_2halo_floor.py  diag02_additive.py  diag03_catalogue_poisson.py  final_metrics.json  fit01.py  fit01_log.txt  fit_cat.py  fit_cat_log.txt  fit_nl_log.txt  logbook.md  make_final.py  model.py  paper.aux  paper.out  paper.tex  plot_cat.py  plot_fit.py
cobaya/: run_after_cccp_chains_fixObB1.sh  run_after_cccp_fixAlpha112.sh  run_after_masked_chains_fullsky.sh  run_chains.sh  run_chains_arnaudB1.sh  run_chains_arnaudB1_beta.sh  run_chains_beta.sh  run_cnc_cosmo.sh  run_cnc_cosmo_B135.sh  run_cnc_cosmo_B135_Om_lnAs.sh  run_cnc_cosmo_B135_Y500c.sh  run_cnc_cosmo_B135_Y500c_d3aNuisance.sh  run_cnc_cosmo_B135_cccp.sh  run_cnc_cosmo_B135_cccp_fixAlpha112.sh  run_cnc_cosmo_B135_unrot_z0p35_cccp.sh  run_cnc_cosmo_B135_unrot_z0p35_cccp_fixAlpha112.sh  run_cnc_cosmo_B135_unrot_z0p35_uniformB.sh  run_cnc_cosmo_B1_Y500c.sh  run_cnc_cosmo_B1_Y500c_cccp.sh  run_cnc_cosmo_B1_Y500c_d3aNuisance.sh  run_cnc_cosmo_B1_Y500c_fixObB1.sh  run_cnc_cosmo_B1_Y500c_uniformB.sh  run_cnc_yy_combined_B1_Y500c.sh  run_cnc_yy_combined_fullsky_B135_Y500c_d3aNuisance.sh  run_cnc_yy_combined_fullsky_B135_cccp.sh  run_cnc_yy_combined_fullsky_B135_cccp_fixAlpha112.sh  run_cnc_yy_combined_fullsky_B1_Y500c.sh  run_cnc_yy_combined_fullsky_B1_Y500c_cccp.sh  run_cnc_yy_combined_fullsky_B1_Y500c_d3aNuisance.sh  run_cnc_yy_combined_fullsky_B1_Y500c_fixObB1.sh  run_nb30_all_cccp.sh  (+10 more)
(+176 files in other folders)
